Blockchain: HP - articles

--- a/blockchain.topmonks.com/src/html/blog/index.njk
+++ b/blockchain.topmonks.com/src/html/blog/index.njk
@@ -74,7 +74,7 @@
                   srcset="{{ publicId | cloudinaryUrl(width=290,height=290,crop="fill",dpr=1)}} 1x,
                     {{ publicId | cloudinaryUrl(width=290,height=290,crop="fill",dpr=1.5)}} 1.5x,
                     {{ publicId | cloudinaryUrl(width=290,height=290,crop="fill",dpr=2)}} 2x">
-          <img alt="" loading="lazy" class="responsive"
+          <img alt="" loading="lazy" class=""
                width="290" height="290"
                src="{{ publicId | cloudinaryUrl(width=290,height=290,crop="fill",dpr="auto")}}">
         </picture>
