--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -293,57 +293,57 @@
           </div>
 
           <article class="blog__box mdc-layout-grid__cell">
-            <a title="Read article MakerDAO"
-               href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">
-              {{ blogImg("MakerDAO", "blockchain.topmonks.com/article-img01.png") }}
+            <a title="Read article Bitcoin and Ethereum"
+               href="https://bankless.substack.com/p/the-moneyness-of-bitcoin-and-ethereum">
+              {{ blogImg("The Moneyness of Bitcoin and Ethereum", "blockchain.topmonks.com/articles/josef-tet.png") }}
             </a>
             <div class="blog__box-body">
-              <span class="published-date">NOVEMBER 14TH 2019</span>
-              <h3>MakerDAO&nbsp;&ndash; výhody, nevýhody a budoucnost projektu</h3>
+              <span class="published-date">APRIL 9TH 2020</span>
+              <h3>The Moneyness of Bitcoin and Ethereum</h3>
               <div class="personal__id">
                 {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 32) }}
                 <span class="name">Josef Tětek</span>
               </div>
               <div class="article-link">
-                <a href="https://btctip.cz/makerdao-vyhody-nevyhody-a-budoucnost-projektu/">Show
+                <a href="https://bankless.substack.com/p/the-moneyness-of-bitcoin-and-ethereum">Show
                   article</a>
               </div>
             </div>
           </article>
 
           <article class="blog__box mdc-layout-grid__cell">
-            <a title="Read article AI is a Distraction"
-               href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">
-              {{ blogImg("AI is a Distraction", "blockchain.topmonks.com/article-img02.png") }}
+            <a title="Read article Rise of the Cryptodollar Interest Rate"
+               href="https://bankless.substack.com/p/rise-of-the-cryptodollar">
+              {{ blogImg("Rise of the Cryptodollar Interest Rate", "blockchain.topmonks.com/articles/josef-tet.png") }}
             </a>
             <div class="blog__box-body">
-              <span class="published-date">NOVEMBER 11TH 2019</span>
-              <h3>"AI is a Distraction" — Interview with Harry Halpin; CEO of NYM</h3>
+              <span class="published-date">FEBRUARY 13TH 2020</span>
+              <h3>Rise of the Cryptodollar Interest Rate</h3>
               <div class="personal__id">
                 {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 32) }}
                 <span class="name">Josef Tětek</span>
               </div>
               <div class="article-link">
-                <a href="https://hackernoon.com/ai-is-a-distraction-interview-with-harry-halpin-ceo-of-nym-e1433x3v">Show
+                <a href="https://bankless.substack.com/p/rise-of-the-cryptodollar">Show
                   article</a>
               </div>
             </div>
           </article>
 
           <article class="blog__box mdc-layout-grid__cell">
-            <a title="Read article MakerDAO a DAI"
-               href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">
-              {{ blogImg("MakerDAO a DAI", "blockchain.topmonks.com/article-img03.png") }}
+            <a title="Read article Bitcoinový smart contract"
+               href="https://www.alza.cz/rsk-bitcoinovy-smart-contract-sidechain">
+              {{ blogImg("Bitcoinový smart contract sidechain", "blockchain.topmonks.com/articles/2020-01-26.png") }}
             </a>
             <div class="blog__box-body">
-              <span class="published-date">NOVEMBER 7TH 2019</span>
-              <h3>MakerDAO a DAI – úrok jako zlý sluha i špatný pán</h3>
+              <span class="published-date">JANUARY 26TH 2019</span>
+              <h3>RSK: Bitcoinový smart contract sidechain (VŠE, CO VÍME)</h3>
               <div class="personal__id">
                 {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 32) }}
                 <span class="name">Josef Tětek</span>
               </div>
               <div class="article-link">
-                <a href="https://btctip.cz/makerdao-a-dai-urok-jako-zly-sluha-i-spatny-pan/">Show
+                <a href="https://www.alza.cz/rsk-bitcoinovy-smart-contract-sidechain">Show
                   article</a>
               </div>
             </div>
