Blockchain Blog: Bitcoin pictures + articles

--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -295,7 +295,7 @@
           <article class="blog__box mdc-layout-grid__cell">
             <a title="Read article Bitcoin and Ethereum"
                href="https://bankless.substack.com/p/the-moneyness-of-bitcoin-and-ethereum">
-              {{ blogImg("The Moneyness of Bitcoin and Ethereum", "blockchain.topmonks.com/articles/josef-tet.png") }}
+              {{ blogImg("The Moneyness of Bitcoin and Ethereum", "blockchain.topmonks.com/articles/2020-04-09v2.png") }}
             </a>
             <div class="blog__box-body">
               <span class="published-date">APRIL 9TH 2020</span>
@@ -314,7 +314,7 @@
           <article class="blog__box mdc-layout-grid__cell">
             <a title="Read article Rise of the Cryptodollar Interest Rate"
                href="https://bankless.substack.com/p/rise-of-the-cryptodollar">
-              {{ blogImg("Rise of the Cryptodollar Interest Rate", "blockchain.topmonks.com/articles/josef-tet.png") }}
+              {{ blogImg("Rise of the Cryptodollar Interest Rate", "blockchain.topmonks.com/articles/2020-02-13.png") }}
             </a>
             <div class="blog__box-body">
               <span class="published-date">FEBRUARY 13TH 2020</span>
@@ -331,19 +331,19 @@
           </article>
 
           <article class="blog__box mdc-layout-grid__cell">
-            <a title="Read article Bitcoinový smart contract"
-               href="https://www.alza.cz/rsk-bitcoinovy-smart-contract-sidechain">
-              {{ blogImg("Bitcoinový smart contract sidechain", "blockchain.topmonks.com/articles/2020-01-26.png") }}
+            <a title="Read article ZRX token model, price and value"
+               href="https://sigilfund.com/research/zrx-token-model-price-and-value/">
+              {{ blogImg("ZRX token model, price and value", "blockchain.topmonks.com/articles/2020-01-16.png") }}
             </a>
             <div class="blog__box-body">
-              <span class="published-date">JANUARY 26TH 2019</span>
-              <h3>RSK: Bitcoinový smart contract sidechain (VŠE, CO VÍME)</h3>
+              <span class="published-date">JANUARY 16TH 2020</span>
+              <h3>ZRX token model, price <br>and value</h3>
               <div class="personal__id">
                 {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 32) }}
                 <span class="name">Josef Tětek</span>
               </div>
               <div class="article-link">
-                <a href="https://www.alza.cz/rsk-bitcoinovy-smart-contract-sidechain">Show
+                <a href="https://sigilfund.com/research/zrx-token-model-price-and-value/">Show
                   article</a>
               </div>
             </div>
