--- a/www.topmonks.com/src/html/index.njk
+++ b/www.topmonks.com/src/html/index.njk
@@ -88,14 +88,41 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="https://www.erstegroupit.com/"
-             title="Erste Group homepage">{{ sprite('img_logo_erste-group', '[logo] Erste Group') }}</a>
-          <a href="https://www.pricefx.eu/site/"
-             title="Pricefx homepage">{{ sprite('img_logo_pricefx', '[logo] Pricefx') }}</a>
-          <a href="https://zonky.cz/" title="Zonky homepage">{{ sprite('img_logo_zonky', '[logo] Zonky') }}</a>
-          <a href="https://www.adler.info/" title="Adler homepage">{{ sprite('img_logo_adler', '[logo] Adler') }}</a>
-          <a href="https://www.shoptet.cz/"
-             title="Shoptet homepage">{{ sprite('img_logo_shoptet', '[logo] Shoptet') }}</a>
+          <div class="mdc-layout-grid__inner">
+            <div class="sprite-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://apify.com/enterprise"
+                 title="Apify homepage">{{ sprite('img_logo_apify', '[logo] Apify') }}
+                <p>Partners</p>
+              </a>
+            </div>
+            <div class="sprite-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.pricefx.eu/site/"
+                 title="Pricefx homepage">{{ sprite('img_logo_pricefx', '[logo] Pricefx') }}
+                <p>Partners</p>
+              </a>
+
+            </div>
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.erstegroupit.com/"
+                 title="Erste Group homepage">{{ sprite('img_logo_erste-group', '[logo] Erste Group') }}</a>
+            </div>
+
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://zonky.cz/" title="Zonky homepage">{{ sprite('img_logo_zonky', '[logo] Zonky') }}</a>
+            </div>
+
+            <div class="sprite-box--adler mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.adler.info/"
+                 title="Adler homepage">{{ sprite('img_logo_adler', '[logo] Adler') }}</a>
+            </div>
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.shoptet.cz/"
+                 title="Shoptet homepage">{{ sprite('img_logo_shoptet', '[logo] Shoptet') }}</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
