--- a/www.topmonks.cz/src/html/index.njk
+++ b/www.topmonks.cz/src/html/index.njk
@@ -237,16 +237,42 @@
           <p>Klienti, kterým jsme pomohli</p>
         </div>
         <div class="cooperation__logos mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="https://www.erstegroupit.com/en/home"
-             title="jdi na Erste Group homepage">{{ sprite('img_logo_erste-group',
-              '[logo] Erste Group') }}</a>
-          <a href="https://www.pricefx.eu/site/" title="jdi na Pricefx homepage">{{ sprite('img_logo_pricefx', '[logo]
-          Pricefx') }}</a>
-          <a href="https://zonky.cz/" title="jdi na Zonky homepage">{{ sprite('img_logo_zonky', '[logo] Zonky') }}</a>
-          <a href="https://www.adler.info/"
-             title="jdi na Adler homepage">{{ sprite('img_logo_adler', '[logo] Adler') }}</a>
-          <a href="https://www.countrylife.cz/"
-             title="jdi na Country Life homepage">{{ sprite('img_logo_country-life', '[logo] Country Life') }}</a>
+          <div class="cooperation__logos--inner mdc-layout-grid__inner">
+
+            <div class="sprite-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://apify.com/enterprise"
+                 title="Apify homepage">{{ sprite('img_logo_apify', '[logo] Apify') }}
+                <p>Partneři</p>
+              </a>
+            </div>
+
+            <div class="sprite-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.pricefx.eu/site/"
+                 title="Pricefx homepage">{{ sprite('img_logo_pricefx', '[logo] Pricefx') }}
+                <p>Partneři</p>
+              </a>
+            </div>
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.erstegroupit.com/"
+                 title="Erste Group homepage">{{ sprite('img_logo_erste-group', '[logo] Erste Group') }}</a>
+            </div>
+
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://zonky.cz/" title="Zonky homepage">{{ sprite('img_logo_zonky', '[logo] Zonky') }}</a>
+            </div>
+
+            <div class="sprite-box--adler mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.adler.info/"
+                 title="Adler homepage">{{ sprite('img_logo_adler', '[logo] Adler') }}</a>
+            </div>
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <a href="https://www.countrylife.cz/"
+                 title="jdi na Country Life homepage">{{ sprite('img_logo_country-life', '[logo] Country Life') }}</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
