--- a/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
@@ -10,6 +10,13 @@
       justify-content: space-between;
       flex-flow: wrap;
     }
+
+    .cooperation__logos--inner {
+      @media (min-width: 480px) and (max-width: 839px) {
+        margin: 0 auto;
+      }
+    }
+
     a {
       display: block;
       padding: 0 16px;
@@ -19,12 +26,45 @@
         display: inline-flex;
       }
     }
+
     .sprite {
       display: inline-block;
-      width: 145px;
+      width: 110px;
+      @media (max-width: 480px) {
+        width: 90px;
+      }
     }
+
+    .sprite-box {
+      a {
+        display: inline-grid;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+
+      p {
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
+        color: #979797;
+        margin-top: -44px;
+        text-align: left;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+
+    .sprite-box--adler {
+      align-self: center;
+      text-align: center;
+    }
+
     .-img_logo_adler {
-      width: 100px;
+      width: 84px;
     }
   }
 
@@ -36,6 +76,7 @@
     --color-1: #31b4e7;
     --color-2: #414142;
   }
+
   .-img_logo_erste-group {
     --color-1: #eb2227;
     --color-2: #0a4a7b;
