Updated restream embedded code

--- a/caffe.topmonks.cz/src/html/live/index.njk
+++ b/caffe.topmonks.cz/src/html/live/index.njk
@@ -383,9 +383,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
           <div style="--aspect-ratio: 16/9;">
-            <iframe class="restream-widget"
-                    src="https://embed.restream.io/player/index.html?token=09179ee482b3ba52d51058c57d7d07cb" width="960"
-                    height="576" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://embed.restream.io/player/index.html?token=8d4bf058144cf6049910377936e60cf1" width="480" height="360" frameborder="0" allowfullscreen></iframe>
           </div>
           <p>Máte dotaz na řečníky?
             <a href="https://app.sli.do/event/ossrhhtg" style="text-decoration: underline">Zeptejte se přes Slido</a>.
