--- a/www.topmonks.cz/src/html/index.njk
+++ b/www.topmonks.cz/src/html/index.njk
@@ -237,19 +237,16 @@
           <p>Klienti, kterým jsme pomohli</p>
         </div>
         <div class="cooperation__logos mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <div class="cooperation__logos--inner mdc-layout-grid__inner">
-
-            <div class="sprite-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <a href="https://apify.com/enterprise"
                  title="Apify homepage">{{ sprite('img_logo_apify', '[logo] Apify') }}
-                <p>Partneři</p>
               </a>
             </div>
 
-            <div class="sprite-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <a href="https://www.pricefx.eu/site/"
                  title="Pricefx homepage">{{ sprite('img_logo_pricefx', '[logo] Pricefx') }}
-                <p>Partneři</p>
               </a>
             </div>
 
@@ -263,7 +260,7 @@
               <a href="https://zonky.cz/" title="Zonky homepage">{{ sprite('img_logo_zonky', '[logo] Zonky') }}</a>
             </div>
 
-            <div class="sprite-box--adler mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <a href="https://www.adler.info/"
                  title="Adler homepage">{{ sprite('img_logo_adler', '[logo] Adler') }}</a>
             </div>
