--- a/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
@@ -2,14 +2,8 @@
   background: none;
 
   .cooperation__logos {
-    margin: 0;
     padding: 0;
-
-    .mdc-layout-grid {
-      @media (min-width: 480px) and (max-width: 839px) {
-        margin: 0 auto;
-      }
-    }
+    margin: 0 auto;
 
     a {
       display: block;
@@ -37,6 +31,9 @@
         color: #979797;
         display: flex;
         margin-top: -34px;
+        @media (max-width: 839px) {
+          margin-top: -24px;
+        }
       }
     }
 
