--- a/www.topmonks.com/src/html/macros/helpers.njk
+++ b/www.topmonks.com/src/html/macros/helpers.njk
@@ -7,9 +7,15 @@
 <span class='sprite sprite--{{id}} {{classes}}'>
   <svg viewBox="{{viewBox}}">
     <title>{{altText}}</title>
-    <use xlink:href='/assets/img/icons.svg#{{id}}'></use>
+    <use xlink:href='#{{id}}'></use>
   </svg>
 </span>
+{% endmacro %}
+
+{% macro spriteTarget() %}
+<div style="width: 0; height: 0; visibility: hidden">
+  <!-- inject:svg --><!-- endinject -->
+</div>
 {% endmacro %}
 
 {% macro css(stylesheet) -%}
