--- a/www.topmonks.cz/src/html/layouts/topmonks.njk
+++ b/www.topmonks.cz/src/html/layouts/topmonks.njk
@@ -1,3 +1,4 @@
+{% from '../macros/helpers.njk' import spriteTarget %}
 <!doctype html>
 <html lang="cs" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# business: http://ogp.me/ns/business#">
 <head>
@@ -38,8 +39,9 @@
 
 {% include 'shared/footer.njk' %}
 
-{% block javascript %}
-{% endblock %}
+{{ spriteTarget() }}
+
+{% block javascript %}{% endblock %}
 
 </body>
 </html>
