[www.topmonks.com] Footer include fix

--- a/www.topmonks.com/src/html/layouts/topmonks.njk
+++ b/www.topmonks.com/src/html/layouts/topmonks.njk
@@ -40,7 +40,7 @@
 </main>
 
 <link rel="stylesheet" href="/assets/css/footer.css">
-{--% include 'common/footer.html' %--}
+{% include 'common/footer.html' %}
 
 {{ spriteTarget() }}
 
