--- a/www.hlidacshopu.cz/src/html/dashboard/index.njk
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.njk
@@ -118,209 +118,5 @@
 {% endblock %}
 
 {% block scripts %}
-  <script type="module">
-    import {
-      html,
-      svg,
-      render
-    } from "https://unpkg.com/lit-html@1.1.1/lit-html.js?module";
-
-    const tableRoot = document.getElementById("table-root");
-    const formatPercents = x => x && `${Math.round(x).toLocaleString("cs")} %`;
-    const timeout = ms => new Promise((_, reject) => setTimeout(() => reject(new Error("timeout")), ms));
-    const shopStats =
-      ({
-         key,
-         count_all,
-         count_bf,
-         declared_sale,
-         real_sale,
-         percent_bf
-       }) => ({
-        key,
-        allProducts: parseInt(count_all),
-        bfProducts: count_bf && parseInt(count_bf),
-        avgClaimedDiscount: declared_sale && parseFloat(declared_sale),
-        avgRealDiscount: real_sale && parseFloat(real_sale)
-      });
-    const shops = new Map([
-      [
-        "alza",
-        {
-          name: "Alza",
-          logo: "alza_logo",
-          url: "https://www.alza.cz/",
-          viewBox: "0 0 60 19",
-          sortKey: 1
-        }
-      ],
-      [
-        "czc",
-        {
-          name: "CZC.CZ",
-          logo: "czc.cz_logo",
-          url: "https://www.czc.cz/",
-          viewBox: "0 0 55 13",
-          sortKey: 3
-        }
-      ],
-      [
-        "datart",
-        {
-          name: "Datart",
-          logo: "datart_logo",
-          url: "https://www.datart.cz/",
-          viewBox: "0 0 98 13",
-          sortKey: 4
-        }
-      ],
-      [
-        "itesco",
-        {
-          name: "iTesco",
-          logo: "tesco_logo",
-          url: "https://www.itesco.cz/",
-          viewBox: "0 0 55 18",
-          sortKey: 10
-        }
-      ],
-      [
-        "kasa",
-        {
-          name: "kasa.cz",
-          logo: "kasa_logo",
-          url: "https://www.kasa.cz/",
-          viewBox: "0 0 70 18",
-          sortKey: 5
-        }
-      ],
-      [
-        "kosik",
-        {
-          name: "Košík.cz",
-          logo: "kosik_logo",
-          url: "https://www.kosik.cz/",
-          viewBox: "0 0 71 22",
-          sortKey: 11
-        }
-      ],
-      [
-        "lekarna",
-        {
-          name: "Lékárna.cz",
-          logo: "lekarna_logo",
-          url: "https://www.lekarna.cz/",
-          viewBox: "0 0 79 20",
-          sortKey: 9
-        }
-      ],
-      [
-        "mall",
-        {
-          name: "Mall.cz",
-          logo: "mall_logo",
-          url: "https://www.mall.cz/",
-          viewBox: "0 0 68 19",
-          sortKey: 2
-        }
-      ],
-      [
-        "mironet",
-        {
-          name: "Mironet",
-          logo: "mironet_logo",
-          url: "https://www.mironet.cz/",
-          viewBox: "0 0 59 20",
-          sortKey: 6
-        }
-      ],
-      [
-        "mountfield",
-        {
-          name: "Mountfield",
-          logo: "mountfield_logo",
-          url: "https://www.mountfield.cz/",
-          viewBox: "0 0 64 11",
-          sortKey: 8
-        }
-      ],
-      //["notino", { name: "Notino", logo: "notino_logo", url: "https://www.notino.cz/", viewBox: "0 0 68 13" }],
-      [
-        "rohlik",
-        {
-          name: "Rohlík.cz",
-          logo: "rohlik_logo",
-          url: "https://www.rohlik.cz/",
-          viewBox: "0 0 51 28",
-          sortKey: 12
-        }
-      ],
-      [
-        "tsbohemia",
-        {
-          name: "TSBohemia",
-          logo: "tsbohemia_logo",
-          url: "https://www.tsbohemia.cz/",
-          viewBox: "0 0 115 15",
-          sortKey: 7
-        }
-      ]
-    ]);
-
-    addEventListener("DOMContentLoaded", async e => {
-      try {
-        const resp = await Promise.race([
-          timeout(4000),
-          fetch("https://api.hlidacshopu.cz/shop-numbers")
-        ]);
-        if (!resp.ok) throw new Error("API error");
-        const shopsData = await resp.json();
-        const shopsStatsData = new Map(
-          shopsData.map(shopStats).map(x => [x.key, x])
-        );
-        const data = Array.from(shops.entries()).map(([key, x]) =>
-          Object.assign({}, x, shopsStatsData.get(key))
-        );
-        render(tableTemplate(data), tableRoot);
-      } catch (ex) {
-        console.error(ex);
-      }
-    });
-
-    function tableTemplate(data) {
-      return data.sort((a, b) => a.sortKey - b.sortKey).map(shopTemplate);
-    }
-
-    function shopTemplate(
-      {
-        name,
-        url,
-        logo,
-        viewBox,
-        allProducts,
-        bfProducts,
-        avgClaimedDiscount,
-        avgRealDiscount
-      }) {
-      return html`
-      <tr class="dashboard-row">
-        <th scope="row">${logoTemplate({ name, url, logo, viewBox })}</th>
-        <td>${allProducts.toLocaleString("cs")}</td>
-        <td>${(bfProducts && bfProducts.toLocaleString("cs")) || "-"}</td>
-        <td>${formatPercents(avgClaimedDiscount) || "-"}</td>
-        <td>${formatPercents(avgRealDiscount) || "-"}</td>
-      </tr>
-    `;
-    }
-
-    function logoTemplate({ logo, name, url, viewBox }) {
-      const image = svg`
-      <svg viewBox="${viewBox}">
-        <title>${name}</title>
-        <use href="/assets/img/icons.svg#${logo}"/>
-      </svg>
-    `;
-      return html`<a href="${url}" class="sprite sprite--${logo}" title="${name}">${image}</a>`;
-    }
-  </script>
+  <script type="module" src="/assets/js/dashboard.js"></script>
 {% endblock %}
