[blockchain.topmonks.com] Some optimizations

--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -7,14 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://www.googletagmanager.com">
-  <link rel="preconnect" href="https://www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="https://www.google.com" crossorigin>
-  <link rel="preconnect" href="https://stats.g.doubleclick.net" crossorigin>
-  <link rel="preconnect" href="https://static.hotjar.com" crossorigin>
-  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap">
+  <link rel="preconnect" href="//fonts.googleapis.com">
+  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="//www.googletagmanager.com">
+  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="//stats.g.doubleclick.net" crossorigin>
+  <link rel="preconnect" href="//static.hotjar.com" crossorigin>
+  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="//res.cloudinary.com">
+  <link rel="preconnect" href="//www.google.com">
+  <link rel="preconnect" href="//www.google.cz">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap" as="stylesheet">
+  <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -47,11 +51,11 @@
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-T4KMQ2F");</script>
   <!-- End Google Tag Manager -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap">
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/blog.css">
 
 </head>
-{% include 'shared/header.html' %}
 
 
 <body>
@@ -62,6 +66,8 @@
           height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+{% include 'shared/header.html' %}
 <div class="tm-content-wrapper">
   <main>
     <section id="main_info" class="main_info">
