--- a/blockchain.topmonks.com/src/html/blog/index.njk
+++ b/blockchain.topmonks.com/src/html/blog/index.njk
@@ -9,9 +9,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <link rel="preconnect" href="//fonts.googleapis.com">
+  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="//www.googletagmanager.com">
   <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="//www.google.com" crossorigin>
-  <link rel="preconnect" href="//static.hotjar.com">
+  <link rel="preconnect" href="//stats.g.doubleclick.net" crossorigin>
+  <link rel="preconnect" href="//static.hotjar.com" crossorigin>
+  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="//res.cloudinary.com">
+  <link rel="preconnect" href="//www.google.com">
+  <link rel="preconnect" href="//www.google.cz">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap" as="stylesheet">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -51,8 +59,16 @@
 
 </head>
 
-{% include 'shared/header.html' %}
 <body class="page--blog">
+
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4KMQ2F"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+
+<!-- End Google Tag Manager (noscript) -->
+{% include 'shared/header.html' %}
 <section id="latest-article" class="">
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
