--- a/www.topmonks.cz/src/html/layouts/topmonks.njk
+++ b/www.topmonks.cz/src/html/layouts/topmonks.njk
@@ -9,10 +9,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
   <link rel="preconnect" href="//res.cloudinary.com">
-  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="//www.google.com" crossorigin>
-  <link rel="preconnect" href="//www.google.cz" crossorigin>
-  <link rel="preconnect" href="//stats.g.doubleclick.net" crossorigin>
+  <link rel="preconnect" href="//www.google-analytics.com">
+  <link rel="preconnect" href="//www.google.com">
+  <link rel="preconnect" href="//www.google.cz">
+  <link rel="preconnect" href="//stats.g.doubleclick.net">
   <link rel="preconnect" href="//static.hotjar.com" crossorigin>
   <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986">
 
