Preconnect only critical content domains

--- a/www.topmonks.com/src/html/case-studies/profi-option/index.njk
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.njk
@@ -6,7 +6,7 @@
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TopMonks Case Study - Profi Option</title>
-  <link rel="preconnect" href="//res.cloudinary.com">
+  <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="preload" as="style" href="https://use.typekit.net/her1ktw.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
