--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -7,16 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="preconnect" href="//fonts.googleapis.com">
-  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="//www.googletagmanager.com">
-  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="//stats.g.doubleclick.net" crossorigin>
-  <link rel="preconnect" href="//static.hotjar.com" crossorigin>
-  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="//res.cloudinary.com">
-  <link rel="preconnect" href="//www.google.com">
-  <link rel="preconnect" href="//www.google.cz">
+  <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap" as="stylesheet">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
