--- a/caffe.topmonks.cz/src/html/live/index.njk
+++ b/caffe.topmonks.cz/src/html/live/index.njk
@@ -6,13 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="preconnect" href="//res.cloudinary.com">
-  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="//www.google.com" crossorigin>
-  <link rel="preconnect" href="//www.google.cz" crossorigin>
-  <link rel="preconnect" href="//stats.g.doubleclick.net" crossorigin>
-  <link rel="preconnect" href="//static.hotjar.com" crossorigin>
-  <link rel="preconnect" href="//embed.restream.io">
+  <link rel="preconnect" href="https://res.cloudinary.com">
+  <link rel="preconnect" href="https://embed.restream.io">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
   <meta name="theme-color" content="#233341">
   <meta name="description"
