--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -6,12 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
-  <link rel="preconnect" href="//fonts.googleapis.com">
-  <link rel="preconnect" href="//www.googletagmanager.com">
-  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="//www.google.com" crossorigin>
-  <link rel="preconnect" href="//stats.g.doubleclick.net" crossorigin>
-  <link rel="preconnect" href="//static.hotjar.com" crossorigin>
+  <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
