--- a/www.topmonks.cz/src/html/layouts/topmonks.njk
+++ b/www.topmonks.cz/src/html/layouts/topmonks.njk
@@ -8,7 +8,7 @@
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
-  <link rel="preconnect" href="//res.cloudinary.com">
+  <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986">
 
   <!--[if lt IE 9]>
