--- a/www.hlidacshopu.cz/src/html/index.njk
+++ b/www.hlidacshopu.cz/src/html/index.njk
@@ -84,22 +84,26 @@
             <picture>
               {% set mobileBanner = images["mobile-banner.png"]["public_id"] %}
               {% set desktopBanner = images["desktop-banner.png"]["public_id"] %}
-              <source media="screen and (max-width: 360px)"
-                      srcset="{{ mobileBanner | cloudinaryUrl(width=328) }} 1x,
-                              {{ mobileBanner | cloudinaryUrl(width=328,dpr=1.5) }} 1.5x,
-                              {{ mobileBanner | cloudinaryUrl(width=328,dpr=2) }} 2x"/>
-              <source media="screen and (min-width: 361px) and (max-width: 479px)"
-                      srcset="{{ mobileBanner | cloudinaryUrl(width=480) }} 1x,
-                              {{ mobileBanner | cloudinaryUrl(width=480,dpr=1.5) }} 1.5x,
-                              {{ mobileBanner | cloudinaryUrl(width=480,dpr=2) }} 2x"/>
-              <source media="screen and (min-width: 480px) and (max-width: 839px)"
-                      srcset="{{ desktopBanner | cloudinaryUrl(width=840) }} 1x,
-                              {{ desktopBanner | cloudinaryUrl(width=840,dpr=1.5) }} 1.5x,
-                              {{ desktopBanner | cloudinaryUrl(width=840,dpr=2) }} 2x"/>
-              <source media="screen and (min-width: 840px)"
-                      srcset="{{ desktopBanner | cloudinaryUrl(width=1008) }} 1x,
-                              {{ desktopBanner | cloudinaryUrl(width=1008,dpr=1.5) }} 1.5x,
-                              {{ desktopBanner | cloudinaryUrl(width=1008,dpr=2) }} 2x"/>
+              <source
+                media="screen and (max-width: 360px)"
+                srcset="{{ mobileBanner | cloudinaryUrl(width=328) }} 1x,
+                        {{ mobileBanner | cloudinaryUrl(width=328,dpr=1.5) }} 1.5x,
+                        {{ mobileBanner | cloudinaryUrl(width=328,dpr=2) }} 2x"/>
+              <source
+                media="screen and (min-width: 361px) and (max-width: 479px)"
+                srcset="{{ mobileBanner | cloudinaryUrl(width=480) }} 1x,
+                        {{ mobileBanner | cloudinaryUrl(width=480,dpr=1.5) }} 1.5x,
+                        {{ mobileBanner | cloudinaryUrl(width=480,dpr=2) }} 2x"/>
+              <source
+                media="screen and (min-width: 480px) and (max-width: 839px)"
+                srcset="{{ desktopBanner | cloudinaryUrl(width=840) }} 1x,
+                        {{ desktopBanner | cloudinaryUrl(width=840,dpr=1.5) }} 1.5x,
+                        {{ desktopBanner | cloudinaryUrl(width=840,dpr=2) }} 2x"/>
+              <source
+                media="screen and (min-width: 840px)"
+                srcset="{{ desktopBanner | cloudinaryUrl(width=1008) }} 1x,
+                        {{ desktopBanner | cloudinaryUrl(width=1008,dpr=1.5) }} 1.5x,
+                        {{ desktopBanner | cloudinaryUrl(width=1008,dpr=2) }} 2x"/>
               <img alt="Analýza Black Friday 2019" class="responsive"
                    src="{{ mobileBanner | cloudinaryUrl(width=480,dpr="auto") }} "/>
             </picture>
@@ -236,7 +240,7 @@
                         {{ chart02 | cloudinaryUrl(width=1008,dpr=2) }} 2x">
               <img alt="" class="responsive" loading="lazy"
                    src="{{ chart02 | cloudinaryUrl(width=1008,dpr="auto") }}"
-                   width="800" height="574" />
+                   width="800" height="574"/>
             </picture>
           </div>
           <div class="tab" id="tab-3">
@@ -421,7 +425,7 @@
         </div>
         <dl class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <dt class="text--grey">Nainstalovaných rozšíření</dt>
-          <dd id="installs-count" class="number">4 500+</dd>
+          <dd id="installs-count" class="number">16 500+</dd>
         </dl>
         <dl class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <dt class="text--grey">Počet e-shopů</dt>
@@ -429,7 +433,7 @@
         </dl>
         <dl class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <dt class="text--grey">Počet produktů</dt>
-          <dd id="products-count" class="number">1 000 000+</dd>
+          <dd id="products-count" class="number">1 250 000+</dd>
         </dl>
       </div>
     </div>
