--- a/www.hlidacshopu.cz/src/html/layouts/master.njk
+++ b/www.hlidacshopu.cz/src/html/layouts/master.njk
@@ -5,6 +5,9 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Hlídač shopů{% endblock %}</title>
+  <link rel="dns-prefetch" href="https://www.google.com">
+  <link rel="dns-prefetch" href="https://stats.g.doubleclick.net">
+  <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link rel="preconnect" href="https://res.cloudinary.com">
   {% block preload %}{% endblock %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
