[studio.topmonks.com]  Fixed headings order

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -468,19 +468,19 @@
               <h2>Team</h2>
             </div>
             <div class="team__member member-fil mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <h4 title="Jiri Fabian">Jiri Fabian</h4>
+              <h3 title="Jiri Fabian">Jiri Fabian</h3>
               <p>Founder, president</p>
             </div>
             <div class="team__member member-linh mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <h4 title="Linh Nguyen">Linh Nguyen</h4>
+              <h3 title="Linh Nguyen">Linh Nguyen</h3>
               <p>Startups analyst</p>
             </div>
             <div class="team__member member-janko mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <h4 title="Jan Lopusek">Jan Lopusek</h4>
+              <h3 title="Jan Lopusek">Jan Lopusek</h3>
               <p>Net-worker</p>
             </div>
             <div class="team__member member-jiri mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <h4 title="Jiri Penzes">Jirí Penzes</h4>
+              <h3 title="Jiri Penzes">Jirí Penzes</h3>
               <p>Tech geek</p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8"></div>
@@ -675,7 +675,7 @@
 
 <script type="module">
   function toggleFieldState(elm) {
-    if (elm.value != "") elm.classList.add("has-value");
+    if (elm.value !== "") elm.classList.add("has-value");
     else elm.classList.remove("has-value");
   }
 
