--- a/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
+++ b/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
@@ -455,7 +455,7 @@ ul {
   text-align: center;
   background: url("/images/price_curve.png") top no-repeat;
   background-size: 100%;
-  padding-bottom: 3em;
+  padding: 3em 0;
 }
 
 .review h2::after {
